--- a/app/src/main/res/layout/viewpager_four.xml
+++ b/app/src/main/res/layout/viewpager_four.xml
@@ -9,7 +9,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="400dp"
-        android:background="@drawable/yingdao3"
+        android:background="@drawable/login_logo_netease_prs"
         android:layout_gravity="center"/>
 
 </LinearLayout>
