--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,15 +8,6 @@
     android:background="@color/colorgreen"
     android:fitsSystemWindows="true"
     android:orientation="vertical">
-    <com.example.star.view.reder.LoadingView
-        android:id="@+id/level_view"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:layout_gravity="center"
-        android:background="@color/colorPrimary"
-        app:loading_renderer="LevelLoadingRenderer"
-        android:visibility="gone"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -27,7 +18,7 @@
             android:layout_height="100dp"
             android:layout_margin="40px"
             android:layout_gravity="center"
-            android:src="@drawable/start_i2"/>
+            android:src="@drawable/login_logo_netease_prs"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -103,7 +94,7 @@
         android:gravity="center"
         android:orientation="horizontal">
         <TextView
-            android:layout_width="60dp"
+            android:layout_width="70dp"
             android:layout_height="1px"
             android:background="@color/colorWhite"/>
         <TextView
@@ -115,7 +106,7 @@
             android:textSize="@dimen/small"
             android:textColor="@color/colorWhite"/>
         <TextView
-            android:layout_width="60dp"
+            android:layout_width="70dp"
             android:layout_height="1px"
             android:background="@color/colorWhite"/>
     </LinearLayout>
@@ -129,17 +120,17 @@
         <ImageView
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:background="@drawable/shangcsp"/>
+            android:background="@drawable/logo_pro_logo_qq"/>
         <ImageView
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
-            android:background="@drawable/shangctp"/>
+            android:background="@drawable/logo_pro_logo_sina"/>
         <ImageView
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:background="@drawable/shangc"/>
+            android:background="@drawable/logo_weixin_big"/>
     </LinearLayout>
 
 </LinearLayout>
