--- a/app/src/main/res/layout/viewpager_one.xml
+++ b/app/src/main/res/layout/viewpager_one.xml
@@ -7,6 +7,6 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="400dp"
-        android:background="@drawable/yingdao1"/>
+        android:background="@drawable/login_logo_netease_prs"/>
 
 </LinearLayout>
