--- a/app/src/main/res/layout/activity_guide.xml
+++ b/app/src/main/res/layout/activity_guide.xml
@@ -62,7 +62,7 @@
             android:text="@string/startNewLife"
             android:layout_gravity="center"
             android:textColor="@color/colorgreen"
-            android:background="@drawable/btncircle"/>
+            android:background="@drawable/ripple_bg"/>
 
     </LinearLayout>
 
