--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -31,42 +31,44 @@
         android:focusableInTouchMode="true">
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <EditText
+            android:layout_height="wrap_content"
+            app:counterEnabled="true"
+            app:counterMaxLength="11"
+            app:hintTextAppearance="@style/FloatingStyle">
+            <android.support.design.widget.TextInputEditText
                 android:id="@+id/username"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/account"
-                android:textSize="@dimen/big"
+                android:textSize="@dimen/big_small"
                 android:textColorHint="@color/colorAccent"
-                android:inputType="textEmailAddress"
+                android:textColor="@color/colorAccent"
+                android:inputType="phone"
                 android:maxLines="1"
+                android:maxLength="11"
                 android:paddingTop="3dp"
                 android:paddingLeft="5dp"
-                android:paddingBottom="10dp"
-                android:singleLine="true"
-                android:textColor="@color/colorWhite"/>
+                android:paddingBottom="10dp"/>
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp">
-            <EditText
+            app:hintTextAppearance="@style/FloatingStyle">
+            <android.support.design.widget.TextInputEditText
                 android:id="@+id/password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/pwd"
-                android:textSize="@dimen/big"
-                android:textColorHint="@color/colorAccent"
+                android:textSize="@dimen/big_small"
                 android:imeOptions="actionUnspecified"
+                android:textColorHint="@color/colorAccent"
+                android:textColor="@color/colorAccent"
                 android:inputType="textPassword"
                 android:paddingTop="3dp"
                 android:paddingLeft="5dp"
                 android:paddingBottom="10dp"
-                android:maxLines="1"
-                android:singleLine="true"
-                android:textColor="@color/colorWhite"/>
+                android:maxLines="1"/>
         </android.support.design.widget.TextInputLayout>
         <Button
             android:id="@+id/login"
@@ -78,7 +80,7 @@
             android:layout_gravity="center"
             android:textSize="@dimen/big"
             android:textColor="@color/colorgreen"
-            android:background="@drawable/btncircle"/>
+            android:background="@drawable/ripple_bg"/>
         <TextView
             android:id="@+id/register"
             android:layout_width="wrap_content"
