--- a/app/src/main/res/drawable/splash.xml
+++ b/app/src/main/res/drawable/splash.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@color/colorgreen"/>
+    <!--<item android:drawable="@color/colorgreen"/>-->
     <item>
         <bitmap
-            android:src="@drawable/login_logo_netease_prs"
-            android:gravity="center"/>
+            android:src="@drawable/skin_theme"/>
+            <!--android:gravity="center"/>-->
     </item>
 </layer-list>
